--- a/wp-content/themes/fipradotcom/sass/layout/_footer.scss
+++ b/wp-content/themes/fipradotcom/sass/layout/_footer.scss
@@ -120,14 +120,14 @@
         @include font-size(20);
         display:inline-block;
         margin-right:em(4px);
-        @include media($media__medium) { margin:0 0 0 em(4px); }
-
-
+        border-radius:3px;
         text-shadow: 0 -2px 0px $color__fipra-blue-gray;
         padding:$v-rhythm / 2 em(12px);
         background-color:lighten($color__fipra-blue-gray, 10%);
+        border-bottom:2px solid darken($color__fipra-blue-gray, 20%);
         color:white;
         @include transition(all 0.3s);
+        @include media($media__medium) { margin:0 0 0 em(4px); }
         &:hover { opacity:0.7; }
 
       }
