Bug fix: colour of footer links now white

--- a/wp-content/themes/fipradotcom/sass/layout/_footer.scss
+++ b/wp-content/themes/fipradotcom/sass/layout/_footer.scss
@@ -68,6 +68,13 @@
         @include span-columns(4);
         padding-bottom: $v-rhythm * 2;
       }
+
+      a {
+        color:white;
+        &:hover {
+          color:darken(white, 10%);
+        }
+      }
     }
   }
 
