Bug fix: colour of text on footer buttons repaired

--- a/wp-content/themes/fipradotcom/sass/layout/_footer.scss
+++ b/wp-content/themes/fipradotcom/sass/layout/_footer.scss
@@ -69,7 +69,7 @@
         padding-bottom: $v-rhythm * 2;
       }
 
-      a {
+      a:not(.btn) {
         color:white;
         &:hover {
           color:darken(white, 10%);
