--- a/wp-content/themes/fipradotcom/style.css
+++ b/wp-content/themes/fipradotcom/style.css
@@ -1297,11 +1297,11 @@ table:not(.no-style) tbody tr:nth-child(even) {
   }
 }
 
-#footer-container footer .footer-section a {
+#footer-container footer .footer-section a:not(.btn) {
   color: white;
 }
 
-#footer-container footer .footer-section a:hover {
+#footer-container footer .footer-section a:not(.btn):hover {
   color: #e6e6e6;
 }
 
