--- a/wp-content/themes/fipradotcom/sass/layout/_page-nav.scss
+++ b/wp-content/themes/fipradotcom/sass/layout/_page-nav.scss
@@ -5,6 +5,7 @@
   border-top:1px solid darken($color__fipra-mid-gray, 5%);
 
   &.with-padding { padding:$v-rhythm 0; }
+  &.with-top-padding { padding:$v-rhythm 0 0 0; }
 
   &.dark-grey { background-color: $color__fipra-dark-gray;
     color:lighten($color__fipra-dark-gray, 40%);
