--- a/wp-content/themes/fipradotcom/sass/pages/_profile.scss
+++ b/wp-content/themes/fipradotcom/sass/pages/_profile.scss
@@ -50,6 +50,8 @@
   }
 }
 
+.site-main-profile { margin-bottom:$v-rhythm * 4; }
+
 
 .profile-content-area {
   p.lead { @include font-size(18); @include media($media__medium) { @include font-size(24); line-height: $v-rhythm * 3; } color:$color__fipra-dark-gray; }
