--- a/wp-content/themes/fipradotcom/sass/layout/_people.scss
+++ b/wp-content/themes/fipradotcom/sass/layout/_people.scss
@@ -1,8 +1,8 @@
 .people-group-container {
   padding-right:em(6px);
+  position:relative;
+  margin-bottom:$v-rhythm;
 
-  .people-group {
-  }
   //    font-size: 0.1px; /* IE 9 & 10 don't like font-size: 0; */
 
   @include media($media__medium) {
@@ -11,6 +11,10 @@
       display:inline-block;
       width:100%;
       content:'';
+    }
+
+    .people-group {
+      padding-left:60px;
     }
   }
 
@@ -25,10 +29,10 @@
 
     @include media($media__medium) { display:inline-block; width:33.333333%; height:300px; border-left:5px solid $color__fipra-lighter-gray; border-right:5px solid $color__fipra-lighter-gray; background-color: transparent; }
 
-    @include media($media__medium-plus) { width:25%; height:300px; }
+    @include media($media__medium-plus) { width:23%; height:300px; }
 
-    @include media($media__large) { width:20%; height:330px; }
-    @include media($media__xlarge) { width:16%; height:290px; }
+    @include media($media__large) { width:19%; height:330px; }
+    @include media($media__xlarge) { width:15%; height:290px; }
 
     &.full-width { width:100%; border:0; }
 
