--- a/wp-content/themes/fipradotcom/sass/modules/_sidebar.scss
+++ b/wp-content/themes/fipradotcom/sass/modules/_sidebar.scss
@@ -75,11 +75,11 @@ ul.sidebar-list {
 }
 
 .sidebar-tag {
-  display:inline-block;
+  @include font-size(12);
+  line-height:1.3;
+  /*display:inline-block;
   padding:6px 6px;
   border-radius: 4px;
   background-color:$color__fipra-light-gray;
-  @include font-size(12);
-  line-height:1.3;
-  margin-bottom:5px;
+  margin-bottom:5px;*/
 }
