--- a/wp-content/themes/fipradotcom/sass/pages/_article.scss
+++ b/wp-content/themes/fipradotcom/sass/pages/_article.scss
@@ -1,15 +1,26 @@
 .article-extract {
   @include clearfix;
-  padding:$v-rhythm * 1.5;
-  border:1px solid darken($color__fipra-light-gray, 10%);
-  margin-bottom:$v-rhythm * 2;
+  // padding:$v-rhythm * 1.5;
+  // border:1px solid darken($color__fipra-light-gray, 10%);
+  margin-bottom:$v-rhythm * 3.5;
+}
 
+.article-extract__section {
+
+  @include media(min-width $media__small) {
+    display:table-cell;
+    vertical-align: top;
+  }
 }
 
 .article-extract__headline {
-  margin:0;
+  margin:0 0 $v-rhythm * 0.5 0;
   font-weight:$font__bold;
-  line-height:1.2;
+  line-height:1.3;
+
+  @include media(max-width $media__small) {
+    @include font-size(18);
+  }
 }
 
 .article-extract__type-icon,
@@ -18,25 +29,31 @@
   vertical-align: middle;
 }
 
+.article-extract__type-container {
+  margin-bottom:$v-rhythm * 0.5;
+  @include font-size(13);
+  letter-spacing:1px;
+  font-weight:$font__black;
+  text-transform: uppercase;
+}
+
 .article-extract__type--news,
 .article__type--news {
-  font-weight:$font__bold;
   color:$color__fipra-turquoise;
 }
 
 .article-extract__type--analysis,
 .article__type--analysis {
-  font-weight:$font__bold;
   color:$color__fipra-orange;
 }
 
 .article-extract__meta,
 .article__meta {
-  padding:$v-rhythm 0;
   text-transform: uppercase;
   color:$color__fipra-blue-gray;
   @include font-size(12);
   line-height:1.4;
+  font-style: italic;
 
   @include media(min-width $media__medium) {
     letter-spacing: 1px;
@@ -44,37 +61,51 @@
 }
 
 .article__meta {
-  @include font-size(14);
-  margin-bottom:$v-rhythm * 2;
+  @include font-size(12);
+  margin:$v-rhythm 0 $v-rhythm * 2;
 }
 
 .article-extract__image {
   display:block;
-  margin-bottom:$v-rhythm;
+  float:left;
+  max-width:100px;
+  margin-bottom:0;
+  margin-right:20px;
 
+  @include media(max-width $media__small) {
+    max-width:100%;
+    margin-right:0;
+    margin-bottom:5px;
+    float: none;
+  }
   @include media(min-width $media__medium) {
-    float:left;
-    max-width:150px;
-    margin-bottom:0;
-    margin-right:20px;
+    max-width:180px;
   }
 }
 
 .article__image {
   display:block;
-  max-width:100%;
-  margin-bottom:$v-rhythm * 2;
+  max-width:150px;
+  float:left;
+  margin:0 15px 10px 0;
 
   @include media(min-width $media__medium) {
-    max-width:300px;
-    float:right;
-    margin:0 0 15px 15px;
+    max-width:250px;
+  }
+
+  @include media(max-width $media__small) {
+    max-width:100%;
   }
 }
 
 .article-extract__text {
   @include font-size(16);
   line-height:1.5;
+  margin-bottom: $v-rhythm * 0.75;
+
+  @include media(max-width $media__small) {
+    @include font-size(14);
+  }
 }
 
 .article-extract__read-more {
@@ -84,8 +115,8 @@
 .article__tags {
   margin-top: $v-rhythm * 2;
   margin-bottom: $v-rhythm * 2;
-  padding:$v-rhythm;
-  border:1px solid darken($color__fipra-light-gray, 10%);
+  /*padding:$v-rhythm;
+  border:1px solid darken($color__fipra-light-gray, 10%);*/
 
   h6 {
     display:inline-block;
@@ -96,7 +127,7 @@
 
 .sidebar-article-extract {
   @include clearfix;
-  margin-top:20px;
+  margin-top:10px;
 }
 .sidebar-article-extract__headline {
   display:block;
@@ -106,8 +137,12 @@
 }
 .sidebar-article-extract__image {
   float:left;
-  max-width:130px;
+  max-width:80px;
   margin:0 10px 10px 0;
+
+  @include media(max-width $media__small) {
+    display:none;
+  }
 }
 .sidebar-article-extract__meta {
   text-transform: uppercase;
