--- a/wp-content/themes/fipradotcom/sass/layout/_layout.scss
+++ b/wp-content/themes/fipradotcom/sass/layout/_layout.scss
@@ -34,6 +34,9 @@
     //If layout includes the sidebar on the left, shift the primary column to the right
     //so it appears first on mobile displays but to the right on desktop displays
     &.left-sidebar { @include media($media__medium) { @include shift(4); } }
+    &.narrow-column {
+      @include media($media__medium) { @include span-columns(9.5); @include shift(1.5); }
+    }
   }
 
   #secondary {
