--- a/wp-content/themes/fipradotcom/sass/pages/_article.scss
+++ b/wp-content/themes/fipradotcom/sass/pages/_article.scss
@@ -2,7 +2,11 @@
   @include clearfix;
   // padding:$v-rhythm * 1.5;
   // border:1px solid darken($color__fipra-light-gray, 10%);
-  margin-bottom:$v-rhythm * 5;
+  margin-bottom:$v-rhythm * 3;
+
+  @include media(min-width $media__medium) {
+    margin-bottom:$v-rhythm * 5;
+  }
 }
 
 .article-extract__section {
@@ -150,4 +154,88 @@
   @include font-size(11);
   line-height:1.2;
   margin-top:5px;
+}
+
+.article-tabs {
+  display:flex;
+  flex-direction: row;
+  justify-content:center;
+  align-items:center;
+  width:100%;
+  margin-bottom:40px;
+
+
+  li {
+    flex-grow:1;
+    text-align: center;
+
+    &:not(:last-of-type) {
+      margin-right:10px;
+    }
+
+    a {
+      position:relative;
+      display:block;
+      text-transform: uppercase;
+      border:1px solid $color__fipra-blue;
+      @include font-size(11);
+      font-weight:$font__bold;
+
+      @include media(min-width $media__medium) {
+        letter-spacing:2px;
+        @include font-size(13);
+      }
+
+      &:hover {
+        background-color: $color__fipra-light-gray;
+      }
+
+      &.active {
+        background-color: $color__fipra-blue;
+        border:1px solid $color__fipra-blue;
+        color:white;
+
+        &::after {
+          position:absolute;
+          background:url('./img/article-tab-active-arrow.png') top left no-repeat;
+          width:16px;
+          height:10px;
+          content: "\00a0";
+          bottom:0px;
+          margin-bottom:-9px;
+          left:50%;
+          margin-left:-6px;
+        }
+
+        &.article-tabs__link--news {
+          background-color: $color__fipra-turquoise;
+          border:1px solid $color__fipra-turquoise;
+          &::after {
+            background:url('./img/article-tab-active-arrow--turquoise.png') top left no-repeat;
+          }
+        }
+        &.article-tabs__link--analysis {
+          background-color: $color__fipra-orange;
+          border:1px solid $color__fipra-orange;
+          &::after {
+            background:url('./img/article-tab-active-arrow--orange.png') top left no-repeat;
+          }
+        }
+
+      }
+
+    }
+  }
+}
+
+.article-group {
+  display:none;
+  
+  &.active {
+    display: block;
+  }
+}
+
+.article-archive-button {
+  margin-top:-($v-rhythm * 2);
 }
