--- a/wp-content/themes/fipradotcom/sass/pages/_ep-election-analysis.scss
+++ b/wp-content/themes/fipradotcom/sass/pages/_ep-election-analysis.scss
@@ -243,12 +243,18 @@
 .ep-election-analysis-tab {
   display: inline-block;
   padding:1rem;
-  margin-right:5px;
   text-transform: uppercase;
+  line-height:1;
+
+  @include media(max-width 768px) {
+    width:45%;
+    font-size:14px;
+  }
 
   &:first-child {
     background-color: #203c7b;
     color:white;
+    margin-right:5px;
     &:hover {
       color:$color__fipra-red;
     }
@@ -312,8 +318,13 @@
         text-transform: uppercase;
 
         .ep-election-review-back-issues__icon {
-          height:15px;
-          margin-right:5px;
+          display: none;
+
+          @include media(min-width 768px) {
+            display: inline;
+            height:15px;
+            margin-right:5px;
+          }
         }
 
         @include media(min-width 768px) {
@@ -339,7 +350,7 @@
 .ep-election-analysis-report-hero-container {
   @include clearfix;
   position: relative;
-  padding:$v-rhythm 1rem;
+  padding:($v-rhythm * 2) 1rem;
   background:radial-gradient(#006b97 0%, #203c7b 100%);
   margin-top:40px;
 
@@ -379,7 +390,7 @@
     z-index:2;
     max-width:200px;
     box-shadow: 0 2px 2px rgba(black, 0.7);
-    margin:-40px auto $v-rhythm;
+    margin:-70px auto $v-rhythm;
 
     @include media(min-width 768px) {
       max-width:unset;
