--- a/wp-content/themes/fipradotcom/sass/pages/_ep-election-analysis.scss
+++ b/wp-content/themes/fipradotcom/sass/pages/_ep-election-analysis.scss
@@ -310,12 +310,17 @@
       background:white;
       box-shadow:0 1px 1px rgba(black, 0.3);
 
+      &:hover {
+        opacity:0.7;
+      }
+
       a {
         display: block;
         width:100%;
         padding:5px 10px;
         font-weight:700;
         text-transform: uppercase;
+        color:$color__fipra-blue !important;
 
         .ep-election-review-back-issues__icon {
           display: none;
