--- a/wp-content/themes/fipradotcom/sass/pages/_ep-election-analysis.scss
+++ b/wp-content/themes/fipradotcom/sass/pages/_ep-election-analysis.scss
@@ -245,6 +245,7 @@
   padding:1rem;
   text-transform: uppercase;
   line-height:1;
+  cursor: pointer;
 
   @include media(max-width 768px) {
     width:45%;
@@ -271,8 +272,25 @@
 
   .ep-election-news-and-analysis__content {
     margin: 0 auto;
-    padding: 2rem 1.5rem;
-    text-align: center;
+    padding: 3rem 1.5rem;
+    text-align: left;
+    max-width:800px;
+
+    @include media(min-width 768px) {
+      font-size: 16px;
+      line-height: 24px;
+    }
+
+    .lead-paragraph {
+      font-size: 20px;
+      line-height: 32px;
+      font-weight:700;
+
+      @include media(min-width 768px) {
+        font-size: 24px;
+        line-height: 36px;
+      }
+    }
   }
 }
 
@@ -381,12 +399,8 @@
       height:100%;
       width:100%;
       background:url(img/2019-ep-elections-report-front-cover-and-inside-pages-mockup.png) top right no-repeat;
-      background-size:contain;
-      opacity:0.5;
-    }
-
-    @include media($media__large) {
-      opacity:1;
+      background-size:80%;
+      opacity:0.1;
     }
   }
 
@@ -412,10 +426,22 @@
     text-align:center;
     color:white;
 
+    a:link,
+    a:visited {
+      color:white;
+      font-weight: 700;
+    }
+
     @include media(min-width 768px) {
       text-align:left;
       transform: skew(30deg);
-      max-width:330px;
+      max-width:800px;
+    }
+
+    .lead-paragraph {
+      font-size: 18px;
+      line-height: 26px;
+      font-weight:700;
     }
   }
 
@@ -423,7 +449,7 @@
     display: none;
 
     @include media(min-width 768px) {
-      display: block;
+      //display: block;
       position: absolute;
       top:0;
       left:0;
