--- a/wp-content/themes/fipradotcom/style.css
+++ b/wp-content/themes/fipradotcom/style.css
@@ -5950,7 +5950,7 @@ object {
     .ep-election-analysis-report-hero-container {
       display: flex;
       align-items: center;
-      justify-content: flex-start;
+      justify-content: center;
       transform: skew(-30deg);
       margin-right: -200px;
       padding: 1.5rem 220px 1.5rem 20px; } }
