--- a/wp-content/themes/fipradotcom/sass/pages/_ep-election-analysis.scss
+++ b/wp-content/themes/fipradotcom/sass/pages/_ep-election-analysis.scss
@@ -378,7 +378,7 @@
   background:radial-gradient(#006b97 0%, #203c7b 100%);
   margin-top:40px;
 
-  @include media(min-width 768px) {
+  @include media($media__large) {
     display: flex;
     align-items: center;
     justify-content:center;
@@ -391,7 +391,7 @@
     display: none;
     transform: skew(30deg);
 
-    @include media(min-width 768px) {
+    @include media($media__large) {
       display: block;
       position: absolute;
       top:0;
@@ -412,7 +412,7 @@
     box-shadow: 0 2px 2px rgba(black, 0.7);
     margin:-70px auto $v-rhythm;
 
-    @include media(min-width 768px) {
+    @include media($media__large) {
       max-width:unset;
       margin:0 30px;
       width:275px;
@@ -432,7 +432,7 @@
       font-weight: 700;
     }
 
-    @include media(min-width 768px) {
+    @include media($media__large) {
       text-align:left;
       transform: skew(30deg);
       max-width:800px;
@@ -448,7 +448,7 @@
   .ep-election-analysis-report-hero__content__skewed-background {
     display: none;
 
-    @include media(min-width 768px) {
+    @include media($media__large) {
       //display: block;
       position: absolute;
       top:0;
